# attic-trusted-publisher

./: Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
nix/: nixos.nix  package.nix
nix/checks/: asymmetric.nix  basic.nix  default.nix  oidc-test-server.py  reverse-proxy.nix
src/: api.rs  client.rs  config.rs  main.rs  token.rs  verifier.rs
