[package]
name = "attic-trusted-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
better_default = "1.0.5"
clap = { version = "4.5.54", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["debug"] }
humantime-serde = "1.1.1"
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
toml = "0.9.11"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
